--- a/cars.html
+++ b/cars.html
@@ -13,6 +13,9 @@
             </h1>
         </div>
         <div>
+            <h2 align="right"><a href="./index.html">Back to Index</a></h2>
+        </div>
+        <div>
             <p>
                 A <b>car</b> is a motor vehicle with wheels. Most definitions of cars state that they run
                 primarily on roads, seat one to eight people, have four wheels, and mainly transport people, not
