--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 <html>
 <head>
     <title>Index</title>
+    <link rel="stylesheet" href="./body.css">
+
 </head>
-<body>
-    <h1>Link to Task 1 :</h1>
+<body >
+
+    <div>
+    <marquee direction="right"> Project Links </marquee>
+    <h2 align="center">Link to Task 1 :</h2>
     <a href="./cars.html"> Task_1</a>
 
-    <h1>Link to Task 2:</h1>
+    <h2 align="center">Link to Task 2:</h2>
     <a href="./Login.html">Task_2</a>
 
-    <h1>Link to Task 3:</h1>
+    <h2 align="center">Link to Task 3:</h2>
     <a href="./Login_2.html">Task_3</a>
 
-    <h1>Link to Task 4:</h1>
+    <h2 align="center">Link to Task 4:</h2>
     <a href="./Excercise.html">Task_4</a>
-    
+    </div>
 </body>
 </html>
