--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <h2 align="center">Link to Task 4:</h2>
     <a href="./Excercise.html">Task_4</a>
+
+    
+    <h2 align="center">Link to Task 5:</h2>
+    <a href="./selectors_1.html">Task_5</a>
     </div>
 </body>
 </html>
