--- a/Excercise.html
+++ b/Excercise.html
@@ -31,7 +31,7 @@
         <img src="./Logo.png" width="250">
         <h1 align="right"><a href="./Next_page.html">next page</a>
         </h1>
-        <h2 align="right"><a href="./index.html">Back to Index</a></h2>
+        <h2 align="right"><a href="./index.html">Home</a></h2>
     </nav>
     </div>
     <div>    
