--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,7 @@
             </title>
         </header>
         <body align="Center">
-            <h2 align="right"><a href="./index.html">Back to Index</a></h2>
+            <h2 align="right"><a href="./index.html">Home</a></h2>
             <img src="./amazon_logo._CB633266945_.png" width = "400" >
             <h1 >Amazon Product Delivery</h1>
            
