--- a/Login_2.html
+++ b/Login_2.html
@@ -9,7 +9,7 @@
             <nav style="background-color: rgb(255, 217, 0);" align="center" >
                 <img src="./hkjhd.webp" width="200"  >
                 <a href="./link_for_page.html"> <h1 align="right">next</h1></a>
-                <h2 align="right"><a href="./index.html">Back to Index</a></h2>
+                <h2 align="right"><a href="./index.html">Home</a></h2>
             </nav>
             
             <form align="center" >
