--- a/selectors_1.html
+++ b/selectors_1.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <h2 align="right"><a href="./index.html">Home</a></h2>
     <H1 class="h2"> The Beauty</H1>
     <img width="1000px" class="img1" src="./1693443716912.jpg">
     <H3 class="h1">Nature</H3>
