--- a/cars.html
+++ b/cars.html
@@ -13,7 +13,7 @@
             </h1>
         </div>
         <div>
-            <h2 align="right"><a href="./index.html">Back to Index</a></h2>
+            <h2 align="right"><a href="./index.html">Home</a></h2>
         </div>
         <div>
             <p>
