--- a/Boot.html
+++ b/Boot.html
@@ -118,6 +118,16 @@
 </div>
 
 </form>
+<br>
+<div>
+  <div class="row">
+  <div class="col-12" align="center">
+<footer class="navbar bg-dark border-bottom border-body" data-bs-theme="dark"></footer>
+ <h4 align="left">&copy; Copyrights X-Workz</h4>
+</footer>
+</div>
+</div>
+</div>
 </body>
 
 
