--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
     <h2 align="center">Link to Task 6:</h2>
     <a href="./Boot.html">Task_6</a>
+
+    <h2 align="center">Link to Task 7:</h2>
+    <a href="./Day_9_task.html">Task_7</a>
     
     </div>
 </body>
