--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@ min-height: 100vh;" >
          </footer>
 </div>
     </div>
-    <script src="./register.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
